err/pbp.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SecureString-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pbp'...
Compiling './lib/python3.5/site-packages/pbp/axolotl.py'...
***   File "./lib/python3.5/site-packages/pbp/axolotl.py", line 385
    print "= %-20s %s" % (k, repr(ctx1.__dict__[k]))
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pbp/main.py'...
***   File "./lib/python3.5/site-packages/pbp/main.py", line 63
    mode = os.stat(opts.basedir).st_mode & 0777
                                              ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/pbp/merkle.py'...
***   File "./lib/python3.5/site-packages/pbp/merkle.py", line 71
    print ' '.join(split_by_n(binascii.hexlify(self.hash),4)),
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pbp/pitchfork.py'...
***   File "./lib/python3.5/site-packages/pbp/pitchfork.py", line 68
    print len(keyid),EKID_SIZE
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pbp/seeder.py'...
***   File "./lib/python3.5/site-packages/pbp/seeder.py", line 74
    print "\r%s" % len(self.seeds),
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pbp/seedstore.py'...
***   File "./lib/python3.5/site-packages/pbp/seedstore.py", line 35
    print 'not found', indexfn, seedsfn
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pbp/simplesign.py'...
***   File "./lib/python3.5/site-packages/pbp/simplesign.py", line 6
    for i in pk: print format("%02h", i)
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pbp-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pysodium'...
Listing './lib/python3.5/site-packages/pysodium-0.6.15.egg-info'...
Listing './lib/python3.5/site-packages/scrypt-0.8.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './share'...
Listing './share/python-wheels'...
